fix: update tags alignment in PostCard

--- a/components/Post/_Card/PostCard.sass
+++ b/components/Post/_Card/PostCard.sass
@@ -8,6 +8,7 @@
     flex-basis: 25%
     display: flex
     flex-direction: column
+    justify-content: space-between
     gap: 2rem
 
     @media screen and (max-width: 767.98px)
